[package]
authors = ["Rory McCann <rory@technomancy.org>"]
description = "Work with MVT files"
homepage = "https://github.com/rory/rust-mapbox-vector-tile"
keywords = ["openstreetmap", "osm", "vector-tiles", "geo"]
license = "AGPL-3.0"
name = "mapbox_vector_tile"
repository = "https://github.com/rory/rust-mapbox-vector-tile"
version = "0.4.0"

[dependencies]
failure = "~0.1.8"
flate2 = "~1.0.1"
geo = "~0.18.0"
protobuf = "~1.4.3"
serde = "~1.0.136"
serde_derive = "~1.0.136"
serde_json = "~1.0.78"
slippy-map-tiles = "~0.16.0"
